Fixed font size and letter spacing in navigation

--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -25,7 +25,7 @@ a:hover {
   text-decoration: none;
 }
 
-ul,
+ul
 {
   margin: 0;
   padding: 0;
@@ -67,9 +67,11 @@ body {
 body {
   font-family: 'Roboto', sans-serif;
   font-size: 14px;
-  line-height: 1.7em;
+  line-height: 1.43;
   font-weight: 400;
   color: #687284;
+  letter-spacing: 0.01071em;
+
 }
 
 a:hover,
